--- a/lumen-quest-2025/backend/package.json
+++ b/lumen-quest-2025/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node scripts/seedData.js",
+    "seed:dev": "NODE_ENV=development node scripts/seedData.js"
   },
   "keywords": [
     "telecom",
