--- a/lumen-quest-2025/frontend/package.json
+++ b/lumen-quest-2025/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
